<resources>
    <string name="app_name">TimeLine</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Login_Register">登录/注册</string>
    <string name="MakeTasks">建立任务</string>
    <string name="Statistics">统计</string>
    <string name="Export">导出</string>
    <string name="Setting">设置</string>

    <string name="Search">搜索</string>
    <string name="Clip">便利贴</string>
    <string name="Week">周</string>
    <string name="Month">月</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login">登录</string>
    <string name="user_name">用户名：</string>
    <string name="password">密  码：</string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="register"><u>新用户注册</u></string>

    <string name="tempData">文字文字文字文字文字</string>
    <string name="runningTime">时间：</string>
    <string name="state">状态：</string>
    <string name="state1_done">完成</string>

    <string name="task_title">标        题：</string>
    <string name="date">日        期：</string>
    <string name="isAllDay">是否全天：</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="classifier">分        类：</string>
    <string name="priority">优先级：</string>
    <string name="isClock">使用闹钟：</string>
    <string name="isRepeat">是否重复：</string>
    <string name="repeat">重复：</string>
    <string name="address">地址：</string>
    <string name="remark">备注：</string>

</resources>
