<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Login_item"
            android:icon="@drawable/login"
            android:title="@string/Login_Register" />
        <item
            android:id="@+id/MakeTasks_item"
            android:icon="@drawable/make_tasks"
            android:title="@string/MakeTasks" />
        <item
            android:id="@+id/Statistics_item"
            android:icon="@drawable/statistics"
            android:title="@string/Statistics" />
        <item
            android:id="@+id/Export_item"
            android:icon="@drawable/export"
            android:title="@string/Export" />
        <item
            android:id="@+id/Setting_item"
            android:icon="@drawable/setting"
            android:title="@string/Setting" />
    </group>

</menu>
