<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:weightSum="5">

    <ImageView
        android:id="@+id/list_Image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/clips" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:textSize="28dp"
            android:textStyle="bold"
            android:text="@string/tempData"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/runningTime"/>
            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/time"
                android:text="9:00"/>
            <TextView
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/startTime"
                android:text=" -- "/>
            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_toRightOf="@id/symbol"
                android:text="10:00"/>
            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/state1_done"
                android:textColor="#00ff00"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/state"
                android:layout_toLeftOf="@id/state"/>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
